# convex-evals

./: .flake8  .gitignore  .pdm-python  AGENTS.md  EVAL_WORKFLOW.md  HALLUCINATIONS.md  Justfile  README.md  TODO.md  buildRelease.ts  build_release.py  bun.lockb  create_eval.py  eslint.config.mjs  package.json  print_report.py  pyproject.toml  run.py  src.eslint.config.mjs  tsconfig.evals.json  tsconfig.json
.cursor/plans/: auto_ci_frequency_0d65ff41.plan.md
.github/workflows/: ablation_experiment.yml  agents_md_experiment.yml  benchmark_openrouter_models_evals.yml  branch_anthropic_evals.yml  daily_anthropic_evals.yml  daily_evals.yml  daily_google_evals.yml  pr_checks.yml  (+14 more)
evalScores/: README.md  package.json  schema.ts  vitest.config.ts
grader/: aiGrader.ts  index.ts
guidelines/: .gitignore  README.md  package.json  tsconfig.json
runner/: convexBackend.test.ts  convexBackend.ts  convex_backend.py  create_eval.py  errors.py  eval_convex_coding.py  evaluate_answers.py  generate.py  guidelines.test.ts  index.test.ts  index.ts  listModels.ts  listTopOpenRouterModels.ts  list_models.py  logging.py  logging.test.ts  logging.ts  main.py  modelCodegen.test.ts  models.test.ts  previewScheduling.ts  reporting.py  reporting.test.ts  reporting.ts  run_grader.py  run_tests.py  scorer.py  scorer.test.ts  scorer.ts  typescript.py
scripts/: ablateGuidelines.ts  compareAgentsMdExperiment.ts  dev.ts  generateAnswerTypes.ts  listModels.ts  listPeriodicModels.ts  listTopOpenRouterBenchmarkModels.ts  listTopOpenRouterModels.ts  modelScheduling.test.ts  modelScheduling.ts  runAblation.ts  runEvals.ts  syncEvalScoresFromProd.ts  validateAnswers.ts  validateGuidelines.ts  workflowSelectors.test.ts
viewer/: bun.lockb  package.json
visualizer/: .cta.json  package.json  vite.config.ts
(+638 files in other folders)
